force-app/main/default/objects/DIR_Case__c/fields/Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>Case_Stage__c</fullName>
    <description>Case Stage used for Case progression image formulas</description>
    <label>Case Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Judgment</fullName>
            </value>
            <value>
                <fullName>JEU Referral</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>