force-app/main/default/objects/DIR_Case__c/fields/Case_Status_Progress_Bar__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Progress_Bar__c</fullName>
    <description>Progress Bar for Lightning pages</description>
    <label>Case Status Progress Bar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Admin Closure</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Post Determination</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>