force-app/main/default/objects/DIR_Case__c/fields/Case_Total_and_Interest__c.field-meta.xml
<CustomField>
    <fullName>Case_Total_and_Interest__c</fullName>
    <description>This field is used for WCA Report Purpose</description>
    <formula>Total_Wage_Penalties__c +  Total_Interest_Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Total and Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>