force-app/main/default/objects/DIR_Case__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <inlineHelpText>Type of case, use General for all others</inlineHelpText>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immigration threat</fullName>
            </value>
            <value>
                <fullName>EPA</fullName>
            </value>
            <value>
                <fullName>OSHA</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>BOFE Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>