force-app/main/default/objects/DIR_Case__c/fields/CaseNo__c.field-meta.xml
<CustomField>
    <fullName>CaseNo__c</fullName>
    <description>Allows for counting cases and summarizing accurately on reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>