force-app/main/default/objects/DIR_Case__c/fields/Cashiering_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Cashiering_Status_Date__c</fullName>
    <description>Date field to capture the date when the Cashiering Status is set to closed</description>
    <label>Cashiering Status Date</label>
    <type>Date</type>
</CustomField>