force-app/main/default/objects/DIR_Case__c/fields/Cause_Determination_Result__c.field-meta.xml
<CustomField>
    <fullName>Cause_Determination_Result__c</fullName>
    <label>Cause Determination Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employer compliance</fullName>
            </value>
            <value>
                <fullName>Employer non-compliance</fullName>
            </value>
            <value>
                <fullName>Appealed, Employer</fullName>
            </value>
            <value>
                <fullName>Appealed, Employee</fullName>
            </value>
            <value>
                <fullName>Dismissed on appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>