force-app/main/default/objects/DIR_Case__c/fields/Child_Labor__c.field-meta.xml
<CustomField>
    <fullName>Child_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger on insert or update RLCV evaluates whether or not a child labor violation has been reported. Used for prioritization.</description>
    <inlineHelpText>Child RLCVs have child labor violations alleged</inlineHelpText>
    <label>Child Labor</label>
    <type>Checkbox</type>
</CustomField>