force-app/main/default/objects/DIR_Case__c/fields/City_Where_Worked__c.field-meta.xml
<CustomField>
    <fullName>City_Where_Worked__c</fullName>
    <label>City Where Worked</label>
    <length>100</length>
    <type>Text</type>
</CustomField>