force-app/main/default/objects/DIR_Case__c/fields/Claim_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Claim_Period_From__c</fullName>
    <description>Date field to capture period of WCA 55 violations (from = start of violation period).</description>
    <label>Employment From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>