force-app/main/default/objects/DIR_Case__c/fields/Claimant__c.field-meta.xml
<CustomField>
    <fullName>Claimant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automatically Creates Case role record. Also used to set the Case Name</inlineHelpText>
    <label>Claimant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Management (Clamant)</relationshipLabel>
    <relationshipName>Case_Management4</relationshipName>
    <type>Lookup</type>
</CustomField>