force-app/main/default/objects/DIR_Case__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <description>Used to indicate that a case is closed. Multiple statuses are considered closed and may be different by record type.
Edited to no longer include RCI Case Statuses.</description>
    <formula>IF (
CASE ( TEXT ( Status__c ),
&#39;Closed&#39;, 1 ,
&#39;Duplicate Case&#39;, 1 ,
&#39;Rejected&#39;, 1 ,
&#39;Closed By PAGA&#39;, 1 , 
&#39;Closed - JEU Referral&#39;, 1,
0 ) 
&gt; 0, TRUE, FALSE )</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>