force-app/main/default/objects/DIR_Case__c/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <inlineHelpText>Displays the date the Case Status was changed to Closed.</inlineHelpText>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>