force-app/main/default/objects/DIR_Case__c/fields/Closure_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Closure_Disposition__c</fullName>
    <description>Dismissed Reason</description>
    <inlineHelpText>Choose the status of the case at closure</inlineHelpText>
    <label>Closure Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dismissed – Claimant Withdrew</fullName>
            </value>
            <value>
                <fullName>Dismissed – Claimant Abandoned</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction – DFEH</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction - WCAB</fullName>
                <label>Lack of Jurisdiction – WCAB</label>
            </value>
            <value>
                <fullName>Lack of Jurisdiction - FMLA</fullName>
                <label>Lack of Jurisdiction – FMLA</label>
            </value>
            <value>
                <fullName>Lack of Jurisdiction - NRLA</fullName>
                <label>Lack of Jurisdiction – NLRA</label>
            </value>
            <value>
                <fullName>Lack of Jurisdiction - DOL (WHD)</fullName>
                <label>Lack of Jurisdiction – DOL (WHD)</label>
            </value>
            <value>
                <fullName>Lack of Jurisdiction – Atty Referral</fullName>
            </value>
            <value>
                <fullName>Lack of Jurisdiction – Other</fullName>
            </value>
            <value>
                <fullName>Untimely (Outside SOL)</fullName>
            </value>
            <value>
                <fullName>PFC – No Protected Activity</fullName>
            </value>
            <value>
                <fullName>PFC – No Employer Knowledge</fullName>
            </value>
            <value>
                <fullName>PFC- No Adverse Action</fullName>
                <label>PFC – No Adverse Action</label>
            </value>
            <value>
                <fullName>PFC – No Causal Link</fullName>
            </value>
            <value>
                <fullName>EPA - No Pay Disparity</fullName>
                <label>EPA – No Pay Disparity</label>
            </value>
            <value>
                <fullName>EPA - No Comparators</fullName>
                <label>EPA – No Comparators</label>
            </value>
            <value>
                <fullName>EPA - No substantially similar work</fullName>
                <label>EPA – No substantially similar work</label>
            </value>
            <value>
                <fullName>EPA - No similar work conditions</fullName>
                <label>EPA – No similar work conditions</label>
            </value>
            <value>
                <fullName>EPA - ER JUST Merit</fullName>
                <label>EPA – ER JUST Merit</label>
            </value>
            <value>
                <fullName>EPA - ER JUST Seniority</fullName>
                <label>EPA – ER JUST Seniority</label>
            </value>
            <value>
                <fullName>EPA - ER JUST Production</fullName>
                <label>EPA – ER JUST Production</label>
            </value>
            <value>
                <fullName>EPA - ER JUST Other BF Factor</fullName>
                <label>EPA – ER JUST Other BF Factor</label>
            </value>
            <value>
                <fullName>Legitimate, Non-Retaliatory Reason</fullName>
            </value>
            <value>
                <fullName>Cause Finding – Compliance</fullName>
            </value>
            <value>
                <fullName>Cause Finding – Enforcement Legal</fullName>
            </value>
            <value>
                <fullName>Cause Finding – Settled</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>CPL Court Filing</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>