force-app/main/default/objects/DIR_Case__c/fields/CM_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>CM_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Case Safe ID</label>
    <type>Text</type>
</CustomField>