force-app/main/default/objects/DIR_Case__c/fields/Collection_Hold_by_Appeal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Collection_Hold_by_Appeal_Deadline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This hidden field when checked indicate that Collection Hold is on when appeal deadline on a case issue has not passed.</description>
    <label>Collection Hold by Appeal Deadline</label>
    <type>Checkbox</type>
</CustomField>