force-app/main/default/objects/DIR_Case__c/fields/Collection_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Referral_Date__c</fullName>
    <description>Date the case was referred to JEU for collections. If left blank, populated with today&#39;s date when JEU referral is set on case.</description>
    <inlineHelpText>Date case was referred to collections</inlineHelpText>
    <label>Collection Referral Date</label>
    <type>Date</type>
</CustomField>