force-app/main/default/objects/DIR_Case__c/fields/Community_Advocate_Group__c.field-meta.xml
<CustomField>
    <fullName>Community_Advocate_Group__c</fullName>
    <description>Selection list of Community Advocate Group</description>
    <label>Community Advocate Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asian Pacific American Legal Center</fullName>
            </value>
            <value>
                <fullName>Asian Pacific Islander Legal Outreach</fullName>
            </value>
            <value>
                <fullName>Asian Law Caucus</fullName>
            </value>
            <value>
                <fullName>Bet Tzedek Legal Services</fullName>
            </value>
            <value>
                <fullName>California Immigrant Policy Center</fullName>
            </value>
            <value>
                <fullName>CRLA, Inc.</fullName>
            </value>
            <value>
                <fullName>CRLAF</fullName>
            </value>
            <value>
                <fullName>Centro Legal de la Raza</fullName>
            </value>
            <value>
                <fullName>Chinese Progressive Assoc.</fullName>
            </value>
            <value>
                <fullName>CLEAN Car Wash Campaign</fullName>
            </value>
            <value>
                <fullName>Coalition for Humane Immigrant Rights LA</fullName>
            </value>
            <value>
                <fullName>Employee Rights Center</fullName>
            </value>
            <value>
                <fullName>Equal Rights Advocates</fullName>
            </value>
            <value>
                <fullName>KIWA - Korea Town Immigrants Workers Alliance</fullName>
            </value>
            <value>
                <fullName>La Raza Centro Legal</fullName>
            </value>
            <value>
                <fullName>Lawyer&#39;s Committee for Civil Rights</fullName>
            </value>
            <value>
                <fullName>Legal Aid Foundation of L.A.</fullName>
            </value>
            <value>
                <fullName>Legal Aid of Marin</fullName>
            </value>
            <value>
                <fullName>Legal Aid Society-Employment Law Center</fullName>
            </value>
            <value>
                <fullName>National Day Laborer Organization Network</fullName>
            </value>
            <value>
                <fullName>National Employment Law Project</fullName>
            </value>
            <value>
                <fullName>National Employment Law Center</fullName>
            </value>
            <value>
                <fullName>Neighborhood Legal Services of LA County</fullName>
            </value>
            <value>
                <fullName>Pilipino Worker Center</fullName>
            </value>
            <value>
                <fullName>Restaurant Opportunity Center-LA</fullName>
            </value>
            <value>
                <fullName>SoCal COSH</fullName>
            </value>
            <value>
                <fullName>South Asian Network</fullName>
            </value>
            <value>
                <fullName>Stanford Community Law Clinic</fullName>
            </value>
            <value>
                <fullName>UCLA Labor Center</fullName>
            </value>
            <value>
                <fullName>Wage Justice Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>