force-app/main/default/objects/DIR_Case__c/fields/Company_s_Workday2__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Workday2__c</fullName>
    <description>Company&#39;s Workday from Accoun</description>
    <formula>Employer__r.Company_s_Workday__c</formula>
    <inlineHelpText>Company&#39;s Workday from Accoun</inlineHelpText>
    <label>Company&#39;s Workday</label>
    <type>Text</type>
</CustomField>