force-app/main/default/objects/DIR_Case__c/fields/Company_s_Workweek__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Workweek__c</fullName>
    <description>Company’s Workweek</description>
    <label>Company’s Workweek</label>
    <length>255</length>
    <type>Text</type>
</CustomField>