force-app/main/default/objects/DIR_Case__c/fields/County_Where_Worked__c.field-meta.xml
<CustomField>
    <fullName>County_Where_Worked__c</fullName>
    <label>County Where Worked</label>
    <length>100</length>
    <type>Text</type>
</CustomField>