force-app/main/default/objects/DIR_Case__c/fields/Court_Case_Name_for_PAGA_Case__c.field-meta.xml
<CustomField>
    <fullName>Court_Case_Name_for_PAGA_Case__c</fullName>
    <description>For PAGA Cases, this is the name of the court case.</description>
    <inlineHelpText>For PAGA Cases, this is the name of the court case.</inlineHelpText>
    <label>Court Case Name for PAGA Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>