force-app/main/default/objects/DIR_Case__c/fields/Court_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Court_Case_Number__c</fullName>
    <inlineHelpText>Indicate the court case number of any related civil action that has been filed</inlineHelpText>
    <label>Court Case Number</label>
    <type>TextArea</type>
</CustomField>