force-app/main/default/objects/DIR_Case__c/fields/Court_Complaint_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Complaint_Submission_Date__c</fullName>
    <description>Date the Court Complaint was submitted online.</description>
    <inlineHelpText>Date the Court Complaint was submitted online.</inlineHelpText>
    <label>Court Complaint Submission Date</label>
    <type>Date</type>
</CustomField>