force-app/main/default/objects/DIR_Case__c/fields/Court_Filing_Date_for_PAGA_Cases__c.field-meta.xml
<CustomField>
    <fullName>Court_Filing_Date_for_PAGA_Cases__c</fullName>
    <label>Court Filing Date for PAGA Case</label>
    <type>Date</type>
</CustomField>